<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="${packageName}.${activityClass}">

    <!-- LOGIN -->
    <EditText
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/login_hint"
        android:inputType="textEmailAddress"
        android:text="@string/login"
        android:textColor="@android:color/secondary_text_light" />

    <!-- PASSWORD -->
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login"
        android:layout_below="@+id/login"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:text="@string/password"
        android:textColor="@android:color/secondary_text_light">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/password"
        android:layout_below="@+id/password"
        android:layout_marginTop="27dp"
        android:background="@android:color/holo_blue_light"
        android:onClick="login"
        android:text="@string/login_action"
        android:textColor="@android:color/white" />

</RelativeLayout>
